--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.9",
+    "axios": "^1.1.3",
     "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
