--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "test": "jest",
     "test:cov": "yarn test --silent --coverage --coverageReporters=text --coverageReporters=text-summary --watchAll=false",
-    "pre-commit": "yarn lint",
-    "pre-push": "yarn lint & yarn test:cov",
+    "pre-commit": "yarn test",
+    "pre-push": "yarn test & yarn test:cov",
     "prepare": "husky install",
     "postinstall": "husky install",
     "prepack": "pinst --disable",
