--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "lint": "eslint .",
     "test:cov": "yarn test --silent --coverage --coverageReporters=text --coverageReporters=text-summary --watchAll=false",
-    "pre-commit": "yarn test",
-    "pre-push": "yarn test & yarn test:cov",
+    "pre-commit": "yarn run lint",
+    "pre-push": "yarn run test:cov",
     "prepare": "husky install",
     "postinstall": "husky install",
     "prepack": "pinst --disable",
