--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "husky": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "eslint": "8.25.0",
