--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@testing-library/react": "^13.4.0",
     "eslint": "8.25.0",
     "eslint-plugin-testing-library": "^5.9.1",
-    "husky": "^8.0.1",
+    "husky": "4",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "eslint-config-next": "^13.0.0"
