--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,8 @@
 name: Continuous Integration (CI)
 
 on:
-  push:
-    branches:
-      - *
   pull_request:
-    branches:
-      - *
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   build:
