--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.9",
-    "ethers": "^5.7.1",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,10 +31,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "eslint": "8.25.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.0",
     "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
-    "eslint-config-next": "^13.0.0"
+    "jest-environment-jsdom": "^29.2.2"
   }
 }
