--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.9",
+    "axios": "^1.2.1",
+    "ethers": "^5.7.2",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
