--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-modal": "^3.16.1",
     "wagmi": "^0.7.4",
     "yup": "^0.32.11"
   },
