--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
     "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "next": "^13.0.0",
+    "nextjs-cors": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
