--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.37.0",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.2",
+    "use-click-away": "^0.0.1",
     "wagmi": "^0.7.4",
     "yup": "^0.32.11"
   },
