--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^2.9.9",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
+    "bignumber.js": "^9.1.1",
     "ethers": "^5.7.2",
     "lodash": "^4.17.21",
     "next": "^13.0.0",
